refac(front): #3554.2 change products look
- Remove links in texts and image for each product
- Added buttons to access each product


Former-commit-id: b34380901c9dd7567b6b43890c4230ff20e0814b

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -70,26 +70,25 @@
             </h3>
           </li>
           <li>
-            <a class="no-underline" href="{{ SITEURL }}/products/integrates/">
-              <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-                <strong class="b">Integrates</strong> is a platform that stores vulnerabilities
-                and gives you access to their evidence in different phases and in real time.
-                You can easily and quickly classify and prioritize them,
-                define their treatments, and check the status and progress of their
-                remediation.
-              </p>
+            <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
+              <strong class="b">Integrates</strong> is a platform that stores vulnerabilities
+              and gives you access to their evidence in different phases and in real time.
+              You can easily and quickly classify and prioritize them,
+              define their treatments, and check the status and progress of their
+              remediation.
+            </p>
+            <a href="{{ SITEURL }}/products/integrates/">
+              <button class="button-white tl roboto fw7">Go to Integrates</button>
             </a>
           </li>
         </ul>
       </div>
       <ul class="list fr center w-60-l w-100 ph0-l ph3">
         <li>
-          <a href="{{ SITEURL }}/products/integrates/">
-            <img
-            class="fr"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
-            alt="Young hacker smiling">
-          </a>
+          <img
+          class="fr"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
+          alt="Young hacker smiling">
         </li>
       </ul>
     </div>
@@ -107,26 +106,25 @@
             </h3>
           </li>
           <li>
-            <a class="no-underline" href="{{ SITEURL }}/products/drills">
-              <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-                <strong class="b">Drills</strong>, through the right combination
-                of technology and human intelligence, finds deep and zero-day vulnerabilities
-                during the software development life cycle.
-                Forget about false positives and false negatives.
-                <strong class="b">Drills</strong> includes SAST, DAST, IAST, and SCA techniques.
-              </p>
+            <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
+              <strong class="b">Drills</strong>, through the right combination
+              of technology and human intelligence, finds deep and zero-day vulnerabilities
+              during the software development life cycle.
+              Forget about false positives and false negatives.
+              <strong class="b">Drills</strong> includes SAST, DAST, IAST, and SCA techniques.
+            </p>
+            <a href="{{ SITEURL }}/products/drills/">
+              <button class="button-white tl roboto fw7">Go to Drills</button>
             </a>
           </li>
         </ul>
       </div>
       <ul class="list fr center w-60-l w-100 ph0-l ph3">
         <li>
-          <a class="no-underline" href="{{ SITEURL }}/products/drills/">
-            <img
-            class="fr"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
-            alt="Young hacker smiling">
-          </a>
+          <img
+          class="fr"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
+          alt="Young hacker smiling">
         </li>
       </ul>
     </div>
@@ -144,25 +142,24 @@
             </h3>
           </li>
           <li>
-            <a class="no-underline" href="{{ SITEURL }}/products/forces/">
-              <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-                <strong class="b">Forces</strong> breaks the build
-                to force remediation of confirmed deep vulnerabilities,
-                re-opened vulnerabilities, and new peripheral vulnerabilities.
-                It can also verify your post-deploy production status.
-              </p>
+            <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
+              <strong class="b">Forces</strong> breaks the build
+              to force remediation of confirmed deep vulnerabilities,
+              re-opened vulnerabilities, and new peripheral vulnerabilities.
+              It can also verify your post-deploy production status.
+            </p>
+            <a href="{{ SITEURL }}/products/forces/">
+              <button class="button-white tl roboto fw7">Go to Forces</button>
             </a>
           </li>
         </ul>
       </div>
       <ul class="list fr center w-60-l w-100 ph0-l ph3">
         <li>
-          <a class="no-underline" href="{{ SITEURL }}/products/forces/">
-            <img
-            class="fr"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
-            alt="Young hacker smiling">
-          </a>
+          <img
+          class="fr"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
+          alt="Young hacker smiling">
         </li>
       </ul>
     </div>
