refac(front): #3554.3 change products look
- Added parallax effect for products
- Changed images of products for the new ones
- Removed outline in buttons


Former-commit-id: c461d6df17d6791baac003d785568673b058324a

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -56,7 +56,15 @@
     </h1>
   </div>
   <div class="pl3-l pr0-l dib w-100">
-    <div class="mh0-l center fl min-vh-100">
+    <div class="mh0-l center fl min-vh-height">
+      <ul class="list fr center w-60-l w-100 ph0-l ph3">
+        <li>
+          <img
+          class="fr"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
+          alt="Young hacker smiling">
+        </li>
+      </ul>
       <div class="parallax_integrates">
         <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
           <li>
@@ -83,16 +91,16 @@
           </li>
         </ul>
       </div>
+    </div>
+    <div class="mh0-l center fl min-vh-height">
       <ul class="list fr center w-60-l w-100 ph0-l ph3">
         <li>
           <img
           class="fr"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
           alt="Young hacker smiling">
         </li>
       </ul>
-    </div>
-    <div class="mh0-l center fl min-vh-100">
       <div class="parallax_drills">
         <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
           <li>
@@ -119,16 +127,16 @@
           </li>
         </ul>
       </div>
+    </div>
+    <div class="mh0-l center fl min-vh-height">
       <ul class="list fr center w-60-l w-100 ph0-l ph3">
         <li>
           <img
           class="fr"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
           alt="Young hacker smiling">
         </li>
       </ul>
-    </div>
-    <div class="mh0-l center fl min-vh-100">
       <div class="parallax_forces">
         <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
           <li>
@@ -154,14 +162,6 @@
           </li>
         </ul>
       </div>
-      <ul class="list fr center w-60-l w-100 ph0-l ph3">
-        <li>
-          <img
-          class="fr"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
-          alt="Young hacker smiling">
-        </li>
-      </ul>
     </div>
   </div>
 </div>
