--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -56,15 +56,7 @@
     </h1>
   </div>
   <div class="pl3-l pr0-l dib w-100">
-    <div class="mh0-l center fl min-vh-height">
-      <ul class="list fr center w-60-l w-100 ph0-l ph3">
-        <li>
-          <img
-          class="fr"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
-          alt="Young hacker smiling">
-        </li>
-      </ul>
+    <div class="mh0-l center fl min-vh-100">
       <div class="parallax_integrates">
         <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
           <li>
@@ -91,16 +83,16 @@
           </li>
         </ul>
       </div>
-    </div>
-    <div class="mh0-l center fl min-vh-height">
       <ul class="list fr center w-60-l w-100 ph0-l ph3">
         <li>
           <img
           class="fr"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-integrates.png"
           alt="Young hacker smiling">
         </li>
       </ul>
+    </div>
+    <div class="mh0-l center fl min-vh-100">
       <div class="parallax_drills">
         <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
           <li>
@@ -127,16 +119,16 @@
           </li>
         </ul>
       </div>
-    </div>
-    <div class="mh0-l center fl min-vh-height">
       <ul class="list fr center w-60-l w-100 ph0-l ph3">
         <li>
           <img
           class="fr"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
           alt="Young hacker smiling">
         </li>
       </ul>
+    </div>
+    <div class="mh0-l center fl min-vh-100">
       <div class="parallax_forces">
         <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
           <li>
@@ -162,6 +154,14 @@
           </li>
         </ul>
       </div>
+      <ul class="list fr center w-60-l w-100 ph0-l ph3">
+        <li>
+          <img
+          class="fr"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
+          alt="Young hacker smiling">
+        </li>
+      </ul>
     </div>
   </div>
 </div>
