rever(front): #3554.8 revert new home design
Former-commit-id: 094110722f4c6d77cb6f59c12cc22b885db3555c

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -46,43 +46,64 @@
 
 <div class="mw9 center h6 pv5 mv5">
   <div class="tl pl3-l pr0-l">
-    <h1 class="c-fluid-bk center roboto w-100 tc ph3-ns ph3 f1-l f2 lh-solid mw7">
+    <h1 class="c-fluid-bk center roboto w-100 tc ph3-ns ph3 f1-l f2 lh-solid">
       Comprehensive Hacking at the Speed of your Business
     </h1>
   </div>
-  <div class="pt4 pb3 pl3-l">
-    <h1 class="c-fluid-bk tl-l tc f1-l f2 roboto">
-      Products
-    </h1>
-  </div>
   <div class="pl3-l pr0-l dib w-100">
-    <div class="mh0-l center fl min-vh-100">
-      <div class="parallax_integrates">
-        <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
-          <li>
-            <h2 class="roboto f2-ns f3 c-fluid-bk strong mv0">
-              The Platform Element
-            </h2>
-          </li>
-          <li>
-            <h3 class="roboto fw1 f3-ns f4 mt0">
-              Control the Process to Achieve Remediation
-            </h3>
-          </li>
-          <li>
-            <a class="no-underline" href="{{ SITEURL }}/products/integrates/">
-              <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-                <strong class="b">Integrates</strong> is a platform that stores vulnerabilities
-                and gives you access to their evidence in different phases and in real time.
-                You can easily and quickly classify and prioritize them,
-                define their treatments, and check the status and progress of their
-                remediation.
-              </p>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <ul class="list fr center w-60-l w-100 ph0-l ph3">
+    <div class="ph3-l pt6-l w-20-l w-100 tc h3 w-100 fr-l nowrap">
+      <ul class="list pl0 tl-l tc">
+        <li class="db-l dib ph3">
+          <input type="radio" id="op1" class="dn" name="menu1" checked />
+          <label class="index1 c-fluid-gray f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op1">
+            <img
+            class="line-menu w2-l w1 h1 fl-l nl-3 pt2 pr2-l pr3 relative"
+            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/line-menu.svg"
+            alt="Young hacker smiling">1. Integrates</label>
+        </li>
+        <li class="db-l dib ph3">
+          <input type="radio" id="op2" class="dn" name="menu1"/>
+          <label class="index2 c-fluid-gray f6 roboto no-underline fw3 hv-fluid-dkred pointer" for="op2">
+            <img
+            class="line-menu w2-l w1 h1 fl-l nl-3 pt2 pr2-l pr3 relative"
+            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/line-menu.svg"
+            alt="Young hacker smiling">2. Drills</label>
+        </li>
+        <li class="db-l dib ph3">
+          <input type="radio" id="op3" class="dn" name="menu1"/>
+          <label class="index3 c-fluid-gray f6 roboto no-underline fw3 hv-fluid-dkred pointer" for="op3">
+            <img
+            class="line-menu w2-l w1 h1 fl-l nl-3 pt2 pr2-l pr3 relative"
+            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/line-menu.svg"
+            alt="Young hacker smiling">3. Forces</label>
+        </li>
+      </ul>
+    </div>
+    <div class="fixes w-80-l w-100 mh0-l ph3-l center fl">
+      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
+        <li>
+          <h2 class="roboto f2-ns f3 c-fluid-bk strong mv0">
+            The Platform Element
+          </h2>
+        </li>
+        <li>
+          <h3 class="roboto fw1 f3-ns f4 mt0">
+            Control the Process to Achieve Remediation
+          </h3>
+        </li>
+        <li>
+          <a class="no-underline" href="{{ SITEURL }}/products/integrates/">
+            <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
+              <strong class="b">Integrates</strong> is a platform that stores vulnerabilities
+              and gives you access to their evidence in different phases and in real time.
+              You can easily and quickly classify and prioritize them,
+              define their treatments, and check the status and progress of their
+              remediation.
+            </p>
+          </a>
+        </li>
+      </ul>
+      <ul class="list fr center w-50-l w-100 ph0-l ph3">
         <li>
           <a href="{{ SITEURL }}/products/integrates/">
             <img
@@ -93,33 +114,31 @@
         </li>
       </ul>
     </div>
-    <div class="mh0-l center fl min-vh-100">
-      <div class="parallax_drills">
-        <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
-          <li>
-            <h2 class="roboto strong c-fluid-bk f2-ns f3 mv0">
-              The Human Element
-            </h2>
-          </li>
-          <li>
-            <h3 class="roboto f3-ns f4 fw1 mt0">
-              Continuous Detection of Vulnerabilities
-            </h3>
-          </li>
-          <li>
-            <a class="no-underline" href="{{ SITEURL }}/products/drills">
-              <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-                <strong class="b">Drills</strong>, through the right combination
-                of technology and human intelligence, finds deep and zero-day vulnerabilities
-                during the software development life cycle.
-                Forget about false positives and false negatives.
-                <strong class="b">Drills</strong> includes SAST, DAST, IAST, and SCA techniques.
-              </p>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <ul class="list fr center w-60-l w-100 ph0-l ph3">
+    <div class="drills w-80-l w-100 mh0-l ph3-l center dn fl">
+      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
+        <li>
+          <h2 class="roboto strong c-fluid-bk f2-ns f3 mv0">
+            The Human Element
+          </h2>
+        </li>
+        <li>
+          <h3 class="roboto f3-ns f4 fw1 mt0">
+            Continuous Detection of Vulnerabilities
+          </h3>
+        </li>
+        <li>
+          <a class="no-underline" href="{{ SITEURL }}/products/drills">
+            <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
+              <strong class="b">Drills</strong>, through the right combination
+              of technology and human intelligence, finds deep and zero-day vulnerabilities
+              during the software development life cycle.
+              Forget about false positives and false negatives.
+              <strong class="b">Drills</strong> includes SAST, DAST, IAST, and SCA techniques.
+            </p>
+          </a>
+        </li>
+      </ul>
+      <ul class="list fr center w-50-l w-100 ph0-l ph3">
         <li>
           <a class="no-underline" href="{{ SITEURL }}/products/drills/">
             <img
@@ -130,32 +149,30 @@
         </li>
       </ul>
     </div>
-    <div class="mh0-l center fl min-vh-100">
-      <div class="parallax_forces">
-        <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
-          <li>
-            <h2 class="roboto c-fluid-bk f2-ns f3 strong mv0">
-              The Robot Element
-            </h2>
-          </li>
-          <li>
-            <h3 class="roboto f3-ns f4 fw1 mt0">
-              Break the Build to Force Remediation
-            </h3>
-          </li>
-          <li>
-            <a class="no-underline" href="{{ SITEURL }}/products/forces/">
-              <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-                <strong class="b">Forces</strong> breaks the build
-                to force remediation of confirmed deep vulnerabilities,
-                re-opened vulnerabilities, and new peripheral vulnerabilities.
-                It can also verify your post-deploy production status.
-              </p>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <ul class="list fr center w-60-l w-100 ph0-l ph3">
+    <div class="forces w-80-l w-100 mh0-l ph3-l center dn fl">
+      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
+        <li>
+          <h2 class="roboto c-fluid-bk f2-ns f3 strong mv0">
+            The Robot Element
+          </h2>
+        </li>
+        <li>
+          <h3 class="roboto f3-ns f4 fw1 mt0">
+            Break the Build to Force Remediation
+          </h3>
+        </li>
+        <li>
+          <a class="no-underline" href="{{ SITEURL }}/products/forces/">
+            <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
+              <strong class="b">Forces</strong> breaks the build
+              to force remediation of confirmed deep vulnerabilities,
+              re-opened vulnerabilities, and new peripheral vulnerabilities.
+              It can also verify your post-deploy production status.
+            </p>
+          </a>
+        </li>
+      </ul>
+      <ul class="list fr center w-50-l w-100 ph0-l ph3">
         <li>
           <a class="no-underline" href="{{ SITEURL }}/products/forces/">
             <img
