--- a/theme/2020/templates/page.html
+++ b/theme/2020/templates/page.html
@@ -226,11 +226,11 @@
     <div
       class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
       <div class="w-100 center">
-        <h2 class="white fw6 f1-l f2 roboto tc ma0">
+        <h2 class="white fw7 f1 f-5-l neue tc ma0">
           {{ page.subtitle }}
         </h2>
         {% if page.subtext %}
-        <h2 class="white f3-l f4 fw3 roboto tc ma0">
+        <h2 class="white f3-l f5-m f6 fw3 roboto tc ma0">
           {{ page.subtext }}
         </h2>
         {% endif %}
@@ -242,7 +242,7 @@
     <div
       class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
       <div class="w-100 center">
-        <h2 class="white fw6 f1-l f2 roboto tc ma0">
+        <h2 class="white fw7 f1 f-5-l neue tc ma0">
           {{ page.title }}
         </h2>
       </div>
