refac(cross): #3587 add banner for asserts
Former-commit-id: 91e21f18702eae1a3d66719f1b34d414237dabfc

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -142,6 +142,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .partners-bg { background-image: url('../../images/about-us/partners/cover-partners.png'); }
 .security-bg { background-image: url('../../images/security/cover-security.png'); }
 .comparative-bg { background-image: url('../../images/services/comparative/cover-comparative.png'); }
+.asserts-bg { background-image: url('../../images/asserts/cover-asserts.png'); }
 .b-max { font-weight: 999; }
 .nb-6 { margin-bottom: -6rem;}
 .lower-img { &:hover { transform: scale(1.1);
