refac(front): #3593 devsecops with forces
- Two new phrases on DevSecOps have been added to Forces paragraphs.


Former-commit-id: c0f464d2ae1435f433d774b9b03a6bbbe53ad3c0

--- a/theme/2020/templates/products/forces.html
+++ b/theme/2020/templates/products/forces.html
@@ -97,7 +97,8 @@
 <div class="tc roboto w-100 center c-lightblack pb6">
   <p class="tl fw1 w-40-l w-50-m w90-s center f3 lh-2">
     <b class="fw7">Forces</b> can be included as part of a continuous integration
-    pipeline. Thus, any changes to the Target of Evaluation (ToE) can be
+    pipeline. It constitutes an essential element for the implementation of DevSecOps
+    in projects. Thus, any changes to the Target of Evaluation (ToE) can be
     continuously tested against the closing of confirmed vulnerabilities.
     Forces can be included in CI/CD (Continuous Integration/Continuous
     Deployment) environments as a security gate, and performs Dynamic and Static
