refac(front): #3558 change the paginator
- Change the paginator component to the new design


Former-commit-id: 392119a00769e1b67129fba4bb2e9f57711b9553

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -914,3 +914,20 @@ video {
 .products-index:hover .products-content {
   display: block;
 }
+
+.paginator {
+  a:not(.current) {
+    padding: 12px 18px;
+    background-color: white;
+    &:hover {
+      background-color: $fluid-red;
+      color: white;
+    }
+  }
+}
+
+.current {
+  padding: 12px 18px;
+  background-color: $fluid-red;
+  color: white;
+}
