--- a/theme/2020/templates/index.html
+++ b/theme/2020/templates/index.html
@@ -135,53 +135,53 @@ Blog | {{ SITENAME }}
  </div>
 {% if DEFAULT_PAGINATION and articles_paginator.num_pages > 1 %}
   <!-- Pager -->
-    <ul class="pager mt0 pb3 ml-auto mr-auto bg-graylight tc">
-      <li class="next di">
+    <div class="w-100 pa5 bg-graylight">
+      <div class="flex flex-wrap tc justify-center paginator">
         {% if articles_page.has_previous() %}
-          <a class="c-fluid-bk roboto hv-fluid-dkred"
+          <a class="c-fluid-bk roboto no-underline fw7 br1"
              href= "{{ SITEURL }}/{{ articles_previous_page.url }} ">
-             &lt; Previous
+             &lt;
           </a>
         {% endif %}
         {% for page_num in range(articles_paginator.num_pages) %}
           {% if loop.first %}
             {% if "tags" not in articles_page.url and "authors" not in articles_page.url and "categories" not in articles_page.url %}
               <a href='{{ SITEURL }}/blog/index.html'
-                class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">{{ page_num + 1 }}</a>
+                class="{{ 'current' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto no-underline fw7 br1">{{ page_num + 1 }}</a>
             {% elif "tags" in articles_page.url %}
               <a href='{{ SITEURL }}/blog/tags/{{ tag|replace(" ", "-")|lower }}/index.html'
-                class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">{{ page_num + 1 }}</a>
+                class="{{ 'current' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto no-underline fw7 br1">{{ page_num + 1 }}</a>
             {% elif "categories" in articles_page.url %}
               <a href='{{ SITEURL }}/blog/categories/{{ category|replace(" ", "-")|lower }}/index.html'
-                class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">{{ page_num + 1 }}</a>
+                class="{{ 'current' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto no-underline fw7 br1">{{ page_num + 1 }}</a>
             {% elif "authors" in articles_page.url %}
               <a href='{{ SITEURL }}/blog/authors/{{ author|replace(" ", "-")|lower }}/index.html'
-                class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">{{ page_num + 1 }}</a>
+                class="{{ 'current' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto no-underline fw7 br1">{{ page_num + 1 }}</a>
             {% endif %}
           {% else %}
             {% if "tags" not in articles_page.url and "authors" not in articles_page.url and "categories" not in articles_page.url %}
               <a href='{{ SITEURL }}/blog/index{{ page_num + 1 }}.html'
-                class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">{{ page_num + 1 }}</a>
+                class="{{ 'current' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto no-underline fw7 br1">{{ page_num + 1 }}</a>
             {% elif "tags" in articles_page.url %}
               <a href='{{ SITEURL }}/blog/tags/{{ tag|replace(" ", "-")|lower }}/index{{ page_num + 1 }}.html'
-                class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">{{ page_num + 1 }}</a>
+                class="{{ 'current' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto no-underline fw7 br1">{{ page_num + 1 }}</a>
             {% elif "categories" in articles_page.url %}
               <a href='{{ SITEURL }}/blog/categories/{{ category|replace(" ", "-")|lower }}/index{{ page_num + 1 }}.html'
-                class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">{{ page_num + 1 }}</a>
+                class="{{ 'current' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto no-underline fw7 br1">{{ page_num + 1 }}</a>
             {% elif "authors" in articles_page.url %}
               <a href='{{ SITEURL }}/blog/authors/{{ author|replace(" ", "-")|lower }}/index{{ page_num + 1 }}.html'
-                class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">{{ page_num + 1 }}</a>
+                class="{{ 'current' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto no-underline fw7 br1">{{ page_num + 1 }}</a>
             {% endif %}
           {% endif %}
         {% endfor %}
         {% if articles_page.has_next() %}
-          <a class="c-fluid-bk roboto hv-fluid-dkred"
+          <a class="c-fluid-bk roboto no-underline fw7 br1"
              href="{{ SITEURL }}/{{ articles_next_page.url }} " >
-             Next &gt;
+             &gt;
           </a>
         {% endif %}
-      </li>
-    </ul>
+      </div>
+    </div>
     <br/>
 {% endif %}
 {% endblock content %}
