fix(front): #3566.3 adjust products vertically
Former-commit-id: b001b6190e08718044e85fd7b8f64ee0f59a0576

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -51,8 +51,8 @@
     </h1>
   </div>
   <div class="pl3-l pr0-l dib w-100">
-    <div class="ph3-l pt6-l w-20-l w-100 tc h3 w-100 fr-l nowrap">
-      <ul class="list pl0 tl-l tc">
+    <div class="ph3-l w-20-l w-100 tc h3 w-100 fr-l nowrap">
+      <ul class="list pl0 tl-l tc mt4">
         <li class="db-l dib ph3">
           <input type="radio" id="op1" class="dn" name="menu1" checked />
           <label class="index1 c-fluid-gray f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op1">
@@ -80,7 +80,7 @@
       </ul>
     </div>
     <div class="fixes w-80-l w-100 mh0-l ph3-l center fl">
-      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
+      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc mt4">
         <li>
           <h2 class="roboto f2-ns f3 c-fluid-bk strong mv0">
             The Platform Element
@@ -103,7 +103,7 @@
           </a>
         </li>
       </ul>
-      <ul class="list fr center w-50-l w-100 ph0-l ph3">
+      <ul class="list fr center w-50-l w-100 ph0-l ph3 mt0">
         <li>
           <a href="{{ SITEURL }}/products/integrates/">
             <img
@@ -115,7 +115,7 @@
       </ul>
     </div>
     <div class="drills w-80-l w-100 mh0-l ph3-l center dn fl">
-      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
+      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc mt4">
         <li>
           <h2 class="roboto strong c-fluid-bk f2-ns f3 mv0">
             The Human Element
@@ -138,7 +138,7 @@
           </a>
         </li>
       </ul>
-      <ul class="list fr center w-50-l w-100 ph0-l ph3">
+      <ul class="list fr center w-50-l w-100 ph0-l ph3 mt0">
         <li>
           <a class="no-underline" href="{{ SITEURL }}/products/drills/">
             <img
@@ -150,7 +150,7 @@
       </ul>
     </div>
     <div class="forces w-80-l w-100 mh0-l ph3-l center dn fl">
-      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
+      <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc mt4">
         <li>
           <h2 class="roboto c-fluid-bk f2-ns f3 strong mv0">
             The Robot Element
@@ -173,7 +173,7 @@
           </a>
         </li>
       </ul>
-      <ul class="list fr center w-50-l w-100 ph0-l ph3">
+      <ul class="list fr center w-50-l w-100 ph0-l ph3 mt0">
         <li>
           <a class="no-underline" href="{{ SITEURL }}/products/forces/">
             <img
