fix(front): #3566.4 adjust products title
Former-commit-id: b08c2f314f1401a486304f69715ebaa1f3b2ecd9

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -45,8 +45,8 @@
 {% block content %}
 
 <div class="mw9 center h6 pv5 mv5">
-  <div class="tl pl3-l pr0-l">
-    <h1 class="c-fluid-bk center roboto w-100 tc ph3-ns ph3 f1-l f2 lh-solid">
+  <div class="tl pl3-l pr0-l pb4">
+    <h1 class="c-fluid-bk center roboto w-100 tc ph3-ns ph3 f1-l f2 lh-solid mw7">
       Comprehensive Hacking at the Speed of your Business
     </h1>
   </div>
